fix: signature visual bug on mobile devices only

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1158,7 +1158,9 @@ footer .links svg:hover {
 
 /*-------------------*/
 @media only screen and (max-width: 480px) {
-
+  #signature {
+    margin-bottom: 40px;
+  }
 }
 
 /*-------------------*/
